# stateful-agent

./: .gitignore  README.md  pyproject.toml
stateful_agent/: README.md  agent.py  deploy.py  linkedin_agent.py  model.py  paper_recommendation_agent.py  pyproject.toml  rednote_agent.py  sqlite_langchain_db.db-journal  test_rednote.py
stateful_agent/John_Collection/: job_guess.txt
stateful_agent/front_end/: settings.toml
stateful_agent/front_end/static/css/: style.css
stateful_agent/front_end/static/js/: main.js
stateful_agent/front_end/templates/: index.html
stateful_agent/stateful_agent/cli/: __main__.py  deploy.py
stateful_agent/tools/: chromadb.py  linkedin_publisher.py  paper_crawler.py  paper_scraper.py  rednote_publisher.py  sqlite.py
